@@ -1,3 +1,7 @@
+2004-10-16  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/defs/Makefile.am: Integrate with common.mk.
+
 2004-10-14  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/defs/ui.defs, gnome/defs/ui-types.defs: Generated.
